"v 1.2.2 modify data augmentation methods"

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 .pytest_cache
 .ipynb_checkpoints
 
-/bioimage-io/**/pytorch3dunet
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -18,3 +16,4 @@ logs/
 # Python packages
 pytorch3dunet.egg-info/
 dist/
+.vscode/settings.json
